--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,20 @@
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    gap:5px;
-    margin-top: 20px;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  gap: 5px;
+  margin-top: 20px;
 }
-.form-container{
-  background-color:#C4D7D2;
+.form-container {
+  background-color: #c4d7d2;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   margin: 0 auto;
-
 }
-body{
+body {
   width: 100%;
   height: 100vh;
   display: flex;
